# peak-cv-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cctv-tui-setup.sh  meson.build  meson.options  peak-webcam.sh
cctv/: cctv-simple.py
include/: genicvbridge.hpp  genicvstream_server.hpp  pixelformat.hpp  stream_server.hpp
include/backend/: aravis.hpp  ids-peak.hpp  impl.hpp  spinnaker.hpp
nano-trigger/: CMakeLists.txt  README.md  set-frequency.sh
nano-trigger/src/: nano-trigger.cpp
src/: capture.cpp  cctv-simple.py  cctv-tui.py  genicvbridge.cpp  genicvcapture.cpp  genicvstream_server.cpp  genicvstreamer.cpp  lib.cpp  lib.hpp  server.cpp  stream_server.cpp  stream_server.hpp
src/backend/: aravis.cpp  ids-peak.cpp  spinnaker.cpp
subprojects/: .gitignore  aravis.wrap
systemd/: example.env  genicvstreamer@.service  peakcvbridge-streamer.service  peakcvbridge-streamer@.service
